# qbit-mining-bootstrap

./: .env.example  .gitignore  Cargo.toml  Makefile  PRISM.md  README.md  compose.production.yaml  compose.yaml
.github/: repository-settings.json
ckpool/: README.md  ckpool.conf.example
config/: upstream.env  upstream.env.example
crates/qbit-pool-builder/: Cargo.toml  README.md
crates/qbit-pool-builder/src/: lib.rs  main.rs
crates/qbit-prism/: Cargo.toml  README.md
crates/qbit-prism/fixtures/: bootstrap-small-log.prism-fixture.json  difficulty-change.prism-fixture.json  power-law-accrual.prism-fixture.json
crates/qbit-prism/sql/: 001_share_ledger.sql
crates/qbit-prism/src/: audit_body_ref.rs  broadcast.rs  ctv.rs  lib.rs  settlement.rs
crates/qbit-prism/tests/: adversarial_invariants.rs  adversarial_pr56.rs  adversarial_settlement_cases.rs  audit_cli.rs  audit_trust_boundary.rs  repro_prism_stall.rs  scale_distributions.rs  verify_codex_fixes.rs
doc/: chain-parameters.md  merge-mining-protocol.md  mining.md  release-notes-0.1.0.md  release-notes-0.1.1.md  release-notes-0.1.2.md  release-notes-0.2.0.md  release-notes-1.0.0.md  router-integration-notes.md
docs/: README.md  bitcoin-release-integrity.md  mainnet-deployment.md  pool-base-decision.md  prism-capacity-readiness.md  prism-claim-evidence.md  prism-fanout-transition-lease.md  prism-ledger-ops.md  prism-pool-ha.md  prism-rejections.md  prism-storage-sizing.md  public-dashboard-api-v1.openapi.yaml  router-integration-notes.md
examples/: curl-createauxblock.sh  curl-getblocktemplate.sh  (+3 more)
(+180 files in other folders)
