[package]
name = "qbit-pool-builder"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Deterministic qbit P2MR coinbase and payout manifest builder"

[dependencies]
ed25519-dalek = { version = "=2.1.1", default-features = false }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
