[package]
name = "qbit-prism"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Payouts, Rewards, and Integrity Settlement Manifest pool accounting for qbit"

[dependencies]
qbit-pool-builder = { path = "../qbit-pool-builder" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"
